--- a/RoutePredictionAlgorithm/RoutePredictionAlgorithm.csproj
+++ b/RoutePredictionAlgorithm/RoutePredictionAlgorithm.csproj
@@ -30,6 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Geodesy">
+      <HintPath>..\packages\Geodesy.1.0.0\lib\net45\Geodesy.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,14 +49,13 @@
     <Compile Include="TripSummary.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Geodesy\Geodesy\Geodesy.csproj">
-      <Project>{5a302b4d-27b5-4ab4-931e-d7d58e50d6f0}</Project>
-      <Name>Geodesy</Name>
-    </ProjectReference>
     <ProjectReference Include="..\LocationClusteringAlgorithm\LocationClusteringAlgorithm.csproj">
       <Project>{f8c97d57-1d9f-4d3c-870b-5e048bbc22a1}</Project>
       <Name>LocationClusteringAlgorithm</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
