Create a validation csv file

--- a/RoutePredictionTest/RoutePredictionTest.csproj
+++ b/RoutePredictionTest/RoutePredictionTest.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CSVWriter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RoutePredictionTest.cs" />
@@ -52,6 +53,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="TestData\TripSummaries.csv" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LocationClusteringAlgorithm\LocationClusteringAlgorithm.csproj">
@@ -63,9 +65,7 @@
       <Name>RoutePredictionAlgorithm</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="TestData\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
